# paxos

./: Makefile.am  README.md  autogen.sh  configure.ac
config-files/: one-legislator.json  three-legislators.json  two-legislators.json
config-files/three-legislators/: three-legislators1.json  three-legislators2.json  three-legislators3.json
config-files/two-legislators/: two-legislators1.json  two-legislators2.json
latex/src/: Makefile  code.sty  main.tex
latex/src/_minted-main/: 5595EB57C7840E258D314D6D347431A302018AB381AD265562A95348870C690B.pygtex
src/: main.cc
src/config/: config.cc  config.hh  parse.cc  parse.hh  parse.hxx
src/connection/: connection.cc  connection.hh
src/error/: connection-closed.hh  connection-failed.hh  init-error.hh  not-implemented.hh  parsing-error.hh
src/events/: event-loop.cc  event-loop.hh  events.cc  events.hh  listener.cc  listener.hh  receive.cc  receive.hh  register.cc  register.hh  register.hxx  send.cc  send.hh
src/law/: ballot.hh  decree.hh
src/legislator/: ledger.cc  ledger.hh  legislator-factory.cc  legislator-factory.hh  legislator.cc  legislator.hh  vote.hh
src/message/: message.cc  message.hh
src/misc/: buffer.cc  buffer.hh  fd.cc  fd.hh  json.hh  logger.cc  logger.hh  socket.hh  sys-wrapper.hh  unistd.hh
src/misc/addrinfo/: addrinfo-error.cc  addrinfo-error.hh  addrinfo-iterator.hh  addrinfo.cc  addrinfo.hh
src/socket/: default-socket.cc  default-socket.hh  socket.hh
